--- a/Menu.html
+++ b/Menu.html
@@ -60,7 +60,7 @@
         <img src="Screenshot 2024-05-25 122643.png" alt="SRK Restaurant Logo" style="height: 50px;">
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Menu.html">Menu</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
                 <li><a href="About Us.html">About Us</a></li>
@@ -74,7 +74,7 @@
 
         <div class="menu-section">
             <h2>Soups</h2>
-            <img src="soup" alt="Soup">
+            <img src="soup.png" alt="Soup">
             <ul>
                 <li>Tomato Soup - $5.99</li>
                 <li>Lentil Soup - $4.99</li>
@@ -84,7 +84,7 @@
 
         <div class="menu-section">
             <h2>Vegetarian Entrees</h2>
-            <img src="veg entries" alt="Vegetarian Entrees" style="height: 300px;">>
+            <img src="veg entries.png" alt="Vegetarian Entrees" style="height: 300px;">>
             <ul>
                 <li>Dal Tadka - $13.99</li>
                 <li>Chana Masala - $14.99</li>
@@ -108,7 +108,7 @@
         <div class="menu-section">
             <h2>Appetizers</h2>
             <h3>Vegetarian</h3>
-            <img src="veg apt" alt="Vegetarian Appetizers">
+            <img src="veg apt.png" alt="Vegetarian Appetizers">
             <ul>
                 <li>Gobi Manchurian - $14.49</li>
                 <li>Paneer 555 - $14.49</li>
@@ -121,7 +121,7 @@
             </ul>
 
             <h3>Non-Vegetarian</h3>
-            <img src="NV APt" alt="Non-Vegetarian Appetizers">
+            <img src="NV APt.png" alt="Non-Vegetarian Appetizers">
             <ul>
                 <li>Chicken Lollipops (Dry) (4) - $16.99</li>
                 <li>Masala Chicken Lollipops (4) - $16.99</li>
@@ -138,7 +138,7 @@
         <div class="menu-section">
             <h2>Biryani</h2>
             <h3>Vegetarian</h3>
-            <img src="Veg Biryani" alt="Vegetarian Biryani">
+            <img src="Veg Biryani.png" alt="Vegetarian Biryani">
             <ul>
                 <li>Veg Dum Biryani - $13.99 / $32.99</li>
                 <li>Avakai Veg Biryani - $15.49 / $32.99</li>
@@ -149,7 +149,7 @@
             </ul>
 
             <h3>Non-Vegetarian</h3>
-            <img src="NV Biryani" alt="Non-Vegetarian Biryani">
+            <img src="NV Biryani.png" alt="Non-Vegetarian Biryani">
             <ul>
                 <li>Hyderabadi Chicken Dum Biryani - $13.99 / $34.99</li>
                 <li>Avakai Chicken Dum Biryani - $17.49 / $39.99</li>
@@ -170,7 +170,7 @@
 
         <div class="menu-section">
             <h2>Non-Vegetarian Entrees</h2>
-            <img src="eggs" alt="Non-Vegetarian Entrees">
+            <img src="eggs.png" alt="Non-Vegetarian Entrees">
             <ul>
                 <li>Egg Masala - $14.49</li>
                 <li>Egg Burji - $14.49</li>
@@ -186,7 +186,7 @@
 
         <div class="menu-section">
             <h2>Desserts</h2>
-            <img src="dessert" alt="Desserts">
+            <img src="dessert.png" alt="Desserts">
             <ul>
                 <li>Gulab Jamun - $4.99</li>
                 <li>Rasmalai - $5.99</li>
@@ -206,7 +206,7 @@
 
         <div class="menu-section">
             <h2>Beverages</h2>
-            <img src="beverages" alt="Beverages">
+            <img src="beverages.png" alt="Beverages">
             <ul>
                 <li>Fresh Lime Soda - $2.99</li>
                 <li>Iced Tea - $3.99</li>
