--- a/About Us.html
+++ b/About Us.html
@@ -51,8 +51,7 @@
         <nav>
             <ul>
 
-                <li><a href="Index.html">Home</a></li>
-
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Menu.html">Menu</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
                 <li><a href="About Us.html">About Us</a></li>
