--- a/contactus.html
+++ b/contactus.html
@@ -50,7 +50,7 @@
         <img src="Screenshot 2024-05-25 122643.png" alt="SRK Restaurant Logo" style="height: 50px;">
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Menu.html">Menu</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
                 <li><a href="About Us.html">About Us</a></li>
